# BoxingPunchClassifier

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
boxing_punch_classifier/: data_processing.py  extract_features.py  feature_selection.py  predict.py  train.py
data/: acc_gyr_experiment_all_left.csv  acc_gyr_experiment_all_right.csv  acc_gyr_experiment_hook_left_fast.csv  acc_gyr_experiment_hook_left_slow.csv  acc_gyr_experiment_hook_right_fast.csv  acc_gyr_experiment_hook_right_slow.csv  acc_gyr_experiment_jab_left_fast.csv  acc_gyr_experiment_jab_left_slow.csv  acc_gyr_experiment_jab_right_fast.csv  acc_gyr_experiment_jab_right_slow.csv  acc_gyr_experiment_uppercut_left_fast.csv  acc_gyr_experiment_uppercut_left_slow.csv  acc_gyr_experiment_uppercut_right_fast.csv  acc_gyr_experiment_uppercut_right_slow.csv  test_sample.csv
model/: model.h5
notebooks/: EDA_BoxingPunchClassifier.ipynb
