
[build-system]
requires = ["setuptools>=72.2.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["boxing_punch_classifier"]

[project]
name = "boxing_punch_classifier"
version = "0.1.0"
requires-python = ">=3.11"
description = ""
authors = [
    { name = "KharchenkoAnastasia" },
]
readme = "README.md"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "matplotlib",
    "seaborn"
    ]




